# llm-zoomcamp-2024

./: .gitignore
homework1_llm/: README.md  hw1.ipynb  pyproject.toml  rag-intro.ipynb
homework2_llm/: Dockerfile  homework.ipynb  pyproject.toml
homework3_llm/: homework.ipynb  pyproject.toml
homework4_llm/: docker-compose.yaml  homework4.ipynb  pyproject.toml
homework5_llm/: README.md
workshop_llm/: hw_LLM_zoomcamp_RAG_demo.ipynb
