[tool.poetry]
name = "homework2-llm"
version = "0.1.0"
description = ""
authors = ["PathornKiti <pathorn.kiti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.42.3"
torch = "^2.3.1"
openai = "^1.35.10"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
