[tool.poetry]
name = "homework3-llm"
version = "0.1.0"
description = ""
authors = ["PathornKiti <pathorn.kiti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
elasticsearch = "^8.14.0"
openai = "^1.35.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
