[tool.poetry]
name = "homework4-llm"
version = "0.1.0"
description = ""
authors = ["PathornKiti <pathorn.kiti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.0"
elasticsearch = "^8.14.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
requests = "^2.32.3"
sentence-transformers = "^3.0.1"
rouge = "1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
